fixed info overflow in mobile screens

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ body {
   font-size: 25px;
   font-family:montserrat, sans-serif;
   margin-top: 25px;
+  display:flex;
+  flex-direction:row;
 }
 
 
